--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="contact-right">
-                    <form id="contactForm" action="https://formsubmit.co/ongweian1234@gmail.com" method="post">
+                    <form id="contactForm" action="https://formsubmit.co/53b7e7d743862b3ab6ff616f2af95611" method="post">
                         <div class="form-group">
                             <input type="text" id="name" name="Name" placeholder="Your Name" required>
                         </div>
