--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
                 </div>
                 <div class="contact-right">
                     <form id="contactForm" action="https://formsubmit.co/53b7e7d743862b3ab6ff616f2af95611" method="post">
+                         <input type="text" name="_honey" style="display: none;">
+                        <input type="hidden" name="_captcha" value="false">
+                        <input type="hidden" name="_next" value="https://aqours66.github.io/Ong-Wei-An_Portfolio/aftermessage.html">
                         <div class="form-group">
                             <input type="text" id="name" name="Name" placeholder="Your Name" required>
                         </div>
