--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <div class="left-content">
                     <!-- Use Font Awesome icons for social media -->
                     <div class="social-media-icons">
-                        <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100038958159735" class="social-icon" aria-label="Facebook Profile"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="social-icon" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
                     </div>
                     <h2 class="anime-title fade-in">Hi, I'm Ong Wei An and I'm <span class="role-text"></span><span class="cursor">|</span></h2>
                     <p class="anime-text fade-in">Hello, I'm Ong Wei An, a passionate Web developer with a strong interest in creating websites. Take a look at my work and feel free to get in touch.</p>
@@ -157,38 +157,38 @@
                 <h2 class="projects-section-title">My work</h2>
                 <div class="work-list" id="workList">
                     <div class="work">
-                        <img src="Image/1331.jpg">
+                        <img src="Image/1331.jpg" alt="Project Image">>
                         <div class="layer">
                             <h3>My project title</h3>
                             <p>Description</p>
-                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt" ></i></a>
                             <a href="#" class="code-button">See Code</a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/1331.jpg">
+                        <img src="Image/1331.jpg" alt="Project Image">>
                         <div class="layer">
                             <h3>My project title</h3>
                             <p>Description</p>
-                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="code-button">See Code</a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/1350.jpg">
+                        <img src="Image/1350.jpg" alt="Project Image">>
                         <div class="layer">
                             <h3>My project title</h3>
                             <p>Description</p>
-                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="code-button">See Code</a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/1350.jpg">
+                        <img src="Image/1350.jpg" alt="Project Image">>
                         <div class="layer">
                             <h3>My project title</h3>
                             <p>Description</p>
-                            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="code-button">See Code</a>
                         </div>
                     </div>
@@ -225,8 +225,11 @@
                 </div>
                 <div class="contact-right">
                     <form id="contactForm" action="https://formsubmit.co/53b7e7d743862b3ab6ff616f2af95611" method="post">
-                         <input type="text" name="_honey" style="display: none;">
+
+                        <input type="text" name="_honey" style="display: none;">
+
                         <input type="hidden" name="_captcha" value="false">
+
                         <input type="hidden" name="_next" value="https://aqours66.github.io/Ong-Wei-An_Portfolio/aftermessage.html">
                         <div class="form-group">
                             <input type="text" id="name" name="Name" placeholder="Your Name" required>
@@ -256,9 +259,9 @@
         <div class="footer-content">
             <p class="footer-text">© 2023 Ong Wei An. All rights reserved.</p>
             <ul class="footer-social">
-                <li><a href="#" class="social-icon"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#" class="social-icon"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#" class="social-icon"><i class="fab fa-github"></i></a></li>
+                <li><a href="#" class="social-icon" aria-label="Facebook Profile"><i class="fab fa-facebook"></i></a></li>
+                <li><a href="#" class="social-icon" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" class="social-icon" aria-label="GitHub Profile"><i class="fab fa-github"></i></a></li>
             </ul>
         </div>
     </footer>
