--- a/aftermessage.html
+++ b/aftermessage.html
@@ -19,7 +19,7 @@
             If you have any further questions, feel free to contact us at <a class="thank-you-link" href="mailto:ongweian1234@gmail.com">ongweian1234@gmail.com</a>.
         </div>
         <div class="thank-you-message">
-            <a class="thank-you-link" href="index.php">&laquo; Back to Contact Form</a>
+            <a class="thank-you-link" href="index.html">&laquo; Back to Contact Form</a>
         </div>
     </div>
 </body>
