--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <h2 class="unique-about-section-title">About Me</h2>
                         <p class="unique-about-section-description">I am a passionate and skilled Fullstack Developer with experience in creating visually stunning designs and innovative solutions. My expertise in XYZ allows me to deliver exceptional results that captivate and engage audiences.</p>
                         <div class="resume-popup-link">
-                            <a href="Image/129.pdf" download class="download-button">Download Resume/CV</a>
+                            <a href="Image/129.pdf" download class="download-button">Download Resume</a>
                         </div>
                     </div>
                     <div class="about-right-content">
@@ -126,7 +126,7 @@
             <div class="resume-popup-content">
                 <button class="close-button" onclick="closePopup()"><i class="fas fa-times"></i></button>
                 <iframe src="Image/129.pdf" frameborder="0"></iframe>
-                <a href="Image/129.pdf" download class="download-button">Download Resume/CV</a>
+                <a href="Image/129.pdf" download class="download-button">Download Resume</a>
             </div>
         </div>
 
