--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="Image/1395.jpg">
     <title>Ong Wei An - Portfolio</title>
+    <meta name="description" content="I'm Ong Wei An, a passionate Fullstack Developer skilled in HTML, CSS, JavaScript, PHP, and MySQL. I create visually stunning websites with a focus on user experience. Explore my projects and get in touch to bring your ideas to life.">
+    <meta name="keywords" content="web development, portfolio, projects, services, web developer, website develpoment, UI/UX Design">
+    <meta name="author" content="Ong Wei An">
+    <meta name="robots" content="index, follow">
+    <!-- Allow search engines to index and follow links -->
+    <meta name="googlebot" content="index, follow">
+    <meta name="og:title" content="Ong Wei An - Portfolio">
+    <meta name="og:description" content="I'm Ong Wei An, a passionate Fullstack Developer skilled in HTML, CSS, JavaScript, PHP, and MySQL. I create visually stunning websites with a focus on user experience. Explore my projects and get in touch to bring your ideas to life.">
+    <meta name="og:url" content="https://aqours66.github.io/Ong-Wei-An_Portfolio/">
+    <!-- URL of your website -->
     <script src="particles.js-master/particles.min.js"></script>
     <link rel="stylesheet" href="css/cursor.css">
     <link rel="stylesheet" href="css/popup.css">
@@ -56,10 +66,11 @@
                 <div class="left-content">
                     <!-- Use Font Awesome icons for social media -->
                     <div class="social-media-icons">
-                        <a href="https://www.facebook.com/profile.php?id=100038958159735" class="social-icon" aria-label="Facebook Profile"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-icon" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon" aria-label="GitHub Profile"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100038958159735" class="social-icon" aria-label="Facebook Profile" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
+                        <a href="https://twitter.com/cfLchJaPXhnqXnX" class="social-icon" aria-label="Twitter Profile" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/Aqours66" class="social-icon" aria-label="GitHub Profile" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
                     </div>
+
                     <h2 class="anime-title fade-in">Hi, I'm Ong Wei An and I'm <span class="role-text"></span><span class="cursor">|</span></h2>
                     <p class="anime-text fade-in">Hello, I'm Ong Wei An, a passionate Web developer with a strong interest in creating websites. Take a look at my work and feel free to get in touch.</p>
                     <!-- Call-to-Action (CTA) button below -->
@@ -85,9 +96,10 @@
                 <div class="unique-about-content">
                     <div class="about-left-content">
                         <h2 class="unique-about-section-title">About Me</h2>
-                        <p class="unique-about-section-description">I am a passionate and skilled Fullstack Developer with experience in creating visually stunning designs and innovative solutions. My expertise in XYZ allows me to deliver exceptional results that captivate and engage audiences.</p>
+                        <p class="unique-about-section-description">As a passionate and proficient Fullstack Developer, I have a strong foundation in a wide range of technologies including HTML, CSS, JavaScript, PHP, and MySQL. This diverse skill set enables me to create visually stunning designs
+                            and implement innovative solutions that captivate and engage audiences.</p>
                         <div class="resume-popup-link">
-                            <a href="Image/129.pdf" download class="download-button">Download Resume</a>
+                            <a href="Image/Ong Wei An-Resume.pdf" download class="download-button">Download Resume</a>
                         </div>
                     </div>
                     <div class="about-right-content">
@@ -104,7 +116,7 @@
                                 <li>CSS</li>
                                 <li>JavaScript</li>
                                 <li>PHP</li>
-                                <li>SQL</li>
+                                <li>MYSQL</li>
                             </ul>
                         </div>
                         <div class="section-content" id="experience-content">
@@ -125,8 +137,8 @@
         <div class="resume-popup" style="display: none;">
             <div class="resume-popup-content">
                 <button class="close-button" onclick="closePopup()"><i class="fas fa-times"></i></button>
-                <iframe src="Image/129.pdf" frameborder="0"></iframe>
-                <a href="Image/129.pdf" download class="download-button">Download Resume</a>
+                <iframe src="Image/Ong Wei An-Resume.pdf" frameborder="0"></iframe>
+                <a href="Image/Ong Wei An-Resume.pdf" download class="download-button">Download Resume</a>
             </div>
         </div>
 
@@ -139,12 +151,12 @@
                 <div class="service">
                     <i class="fas fa-laptop-code"></i>
                     <h3>Web Development</h3>
-                    <p>We offer professional web development services to create fast, responsive, and user-friendly websites tailored to your needs.</p>
+                    <p>I offer professional web development services to create fast, responsive, and user-friendly websites tailored to your needs.</p>
                 </div>
                 <div class="service">
                     <i class="fas fa-paint-brush"></i>
                     <h3>UI/UX Design</h3>
-                    <p>We create stunning and intuitive user interfaces that enhance user experience and make your product stand out.</p>
+                    <p>I create stunning and intuitive user interfaces that enhance user experience and make your website stand out.</p>
                 </div>
 
             </div>
@@ -157,12 +169,13 @@
                 <h2 class="projects-section-title">My work</h2>
                 <div class="work-list" id="workList">
                     <div class="work">
-                        <img src="Image/1331.jpg" alt="Project Image">>
+                        <img src="Image/Project 1.png" alt="Project Image">>
                         <div class="layer">
-                            <h3>My project title</h3>
-                            <p>Description</p>
+                            <h3>Lens Supplier System</h3>
+                            <p>A comprehensive e-commerce platform for a fictional lens supplier, providing opticians with an intuitive shopping experience. Designed and implemented a robust admin panel for efficient inventory management, order processing,
+                                and customer support.</p>
                             <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt" ></i></a>
-                            <a href="#" class="code-button">See Code</a>
+                            <a href="https://github.com/Aqours66/Project-FYP" class="code-button" target="_blank" rel="noopener">View Code</a>
                         </div>
                     </div>
                     <div class="work">
@@ -171,7 +184,7 @@
                             <h3>My project title</h3>
                             <p>Description</p>
                             <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="code-button">See Code</a>
+                            <a href="#" class="code-button">View Code</a>
                         </div>
                     </div>
                     <div class="work">
@@ -180,7 +193,7 @@
                             <h3>My project title</h3>
                             <p>Description</p>
                             <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="code-button">See Code</a>
+                            <a href="#" class="code-button">View Code</a>
                         </div>
                     </div>
                     <div class="work">
@@ -189,7 +202,7 @@
                             <h3>My project title</h3>
                             <p>Description</p>
                             <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="code-button">See Code</a>
+                            <a href="#" class="code-button">View Code</a>
                         </div>
                     </div>
 
@@ -202,7 +215,7 @@
                 <img id="popupImage" src="" alt="Project Image">
                 <div class="popup-content">
                     <h3 id="popupTitle"></h3>
-                    <p id="popupDescription"></p>
+                    <p class="popupDescription" id="popupDescription"></p>
                     <div class="buttons">
                         <a id="websiteButton" href="#" class="popup-button">Preview</a>
                         <a id="githubButton" href="#" class="popup-button">View Code</a>
@@ -259,9 +272,15 @@
         <div class="footer-content">
             <p class="footer-text">© 2023 Ong Wei An. All rights reserved.</p>
             <ul class="footer-social">
-                <li><a href="#" class="social-icon" aria-label="Facebook Profile"><i class="fab fa-facebook"></i></a></li>
-                <li><a href="#" class="social-icon" aria-label="Twitter Profile"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#" class="social-icon" aria-label="GitHub Profile"><i class="fab fa-github"></i></a></li>
+                <li>
+                    <a href="https://www.facebook.com/profile.php?id=100038958159735" class="social-icon" aria-label="Facebook Profile" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/cfLchJaPXhnqXnX" class="social-icon" aria-label="Twitter Profile" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://github.com/Aqours66" class="social-icon" aria-label="GitHub Profile" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+                </li>
             </ul>
         </div>
     </footer>
