--- a/aftermessage.html
+++ b/aftermessage.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="thank-you-container">
-        <img class="thank-you-image" src="anime_thankyou.png" alt="Anime Thank You">
+        <img class="thank-you-image" src="anime_thankyou.png" alt="Thank You">
         <div class="thank-you-title">Thank You!</div>
         <div class="thank-you-message">
             Thank you for your message. We have received your inquiry and will get back to you soon.
