--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="right-content">
                     <div class="profile-image">
-                        <img src="Image/1350.jpg" alt="Your Name" class="profile-image">
+                        <img src="Image/1350.jpg" alt="Ong Wei An Image" class="profile-image">
                     </div>
                 </div>
 
@@ -99,7 +99,7 @@
                         <p class="unique-about-section-description">As a passionate and proficient Fullstack Developer, I have a strong foundation in a wide range of technologies including HTML, CSS, JavaScript, PHP, and MySQL. This diverse skill set enables me to create visually stunning designs
                             and implement innovative solutions that captivate and engage audiences.</p>
                         <div class="resume-popup-link">
-                            <a href="Image/Ong Wei An-Resume.pdf" download class="download-button">Download Resume</a>
+                            <a href="Image/Ong Wei An- Resume  2.pdf" download class="download-button">Download Resume</a>
                         </div>
                     </div>
                     <div class="about-right-content">
@@ -137,8 +137,8 @@
         <div class="resume-popup" style="display: none;">
             <div class="resume-popup-content">
                 <button class="close-button" onclick="closePopup()"><i class="fas fa-times"></i></button>
-                <iframe src="Image/Ong Wei An-Resume.pdf" frameborder="0"></iframe>
-                <a href="Image/Ong Wei An-Resume.pdf" download class="download-button">Download Resume</a>
+                <iframe src="Image/Ong Wei An- Resume  2.pdf" frameborder="0"></iframe>
+                <a href="Image/Ong Wei An- Resume  2.pdf" download class="download-button">Download Resume</a>
             </div>
         </div>
 
