--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/divider.css">
-    <link rel="stylesheet" href="css/loading-screen.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/services.css">
     <link rel="stylesheet" href="css/projects.css">
@@ -96,10 +95,10 @@
                 <div class="unique-about-content">
                     <div class="about-left-content">
                         <h2 class="unique-about-section-title">About Me</h2>
-                        <p class="unique-about-section-description">As a passionate and proficient Fullstack Developer, I have a strong foundation in a wide range of technologies including HTML, CSS, JavaScript, PHP, and MySQL. This diverse skill set enables me to create visually stunning designs
-                            and implement innovative solutions that captivate and engage audiences.</p>
+                        <p class="unique-about-section-description">Experienced web developer passionate about creating innovative solutions. Seeking a challenging role to leverage expertise in HTML, CSS, JavaScript, PHP, MYSQL, and WordPress. Committed to contributing technical skills to drive
+                            the success of dynamic web projects and staying current with emerging technologies.</p>
                         <div class="resume-popup-link">
-                            <a href="Image/Ong Wei An- Resume  2.pdf" download class="download-button">Download Resume</a>
+                            <a href="Image/Ong Wei An- Resume .pdf" download class="download-button">Download Resume</a>
                         </div>
                     </div>
                     <div class="about-right-content">
@@ -117,11 +116,16 @@
                                 <li>JavaScript</li>
                                 <li>PHP</li>
                                 <li>MYSQL</li>
+                                <li>WordPress</li>
                             </ul>
                         </div>
                         <div class="section-content" id="experience-content">
                             <h3>Experience</h3>
-                            <!-- Add content for Experience section here -->
+                            <div class="experience-item">
+                                <h4>Xantec - Software & Web Development</h4>
+                                <p class="experience-duration">Oct 2023 - Dec 2023</p>
+                                <p class="experience-role">Web Developer Intern</p>
+                            </div>
                         </div>
                         <div class="section-content" id="credentials-content">
                             <h3>Credentials</h3>
@@ -137,8 +141,8 @@
         <div class="resume-popup" style="display: none;">
             <div class="resume-popup-content">
                 <button class="close-button" onclick="closePopup()"><i class="fas fa-times"></i></button>
-                <iframe src="Image/Ong Wei An- Resume  2.pdf" frameborder="0"></iframe>
-                <a href="Image/Ong Wei An- Resume  2.pdf" download class="download-button">Download Resume</a>
+                <iframe src="Image/Ong Wei An- Resume .pdf" frameborder="0"></iframe>
+                <a href="Image/Ong Wei An- Resume .pdf" download class="download-button">Download Resume</a>
             </div>
         </div>
 
@@ -169,7 +173,7 @@
                 <h2 class="projects-section-title">My work</h2>
                 <div class="work-list" id="workList">
                     <div class="work">
-                        <img src="Image/Project 1.png" alt="Project Image">>
+                        <img src="Image/Project 1.png" alt="Project Image">
                         <div class="layer">
                             <h3>Lens Supplier System</h3>
                             <p>A comprehensive e-commerce platform for a fictional lens supplier, providing opticians with an intuitive shopping experience. Designed and implemented a robust admin panel for efficient inventory management, order processing,
@@ -179,7 +183,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/1331.jpg" alt="Project Image">>
+                        <img src="Image/Project 1.png" alt="Project Image">
                         <div class="layer">
                             <h3>My project title</h3>
                             <p>Description</p>
@@ -188,7 +192,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/1350.jpg" alt="Project Image">>
+                        <img src="Image/Project 1.png" alt="Project Image">
                         <div class="layer">
                             <h3>My project title</h3>
                             <p>Description</p>
@@ -197,7 +201,7 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/1350.jpg" alt="Project Image">>
+                        <img src="Image/Project 1.png" alt="Project Image">
                         <div class="layer">
                             <h3>My project title</h3>
                             <p>Description</p>
