--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/Project 1.png" alt="Project Image">
+                        <img src="Image/Project 2.png" alt="Project Image">
                         <div class="layer">
-                            <h3>My project title</h3>
-                            <p>Description</p>
-                            <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="code-button">View Code</a>
+                            <h3>Click Game</h3>
+                            <p>A Simple Click Game</p>
+                            <a href="https://aqours66.github.io/Click-Game/" aria-label="Project Website"><i class="fas fa-external-link-alt" target="_blank"></i></a>
+                            <a href="https://github.com/Aqours66/Click-Game" class="code-button" target="_blank" rel="noopener">View Code</a>
                         </div>
                     </div>
                     <div class="work">
