--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/Project 1.png" alt="Project Image">
+                        <img src="Image/Project 3.png" alt="Project Image">
                         <div class="layer">
-                            <h3>My project title</h3>
-                            <p>Description</p>
-                            <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="code-button">View Code</a>
+                            <h3>Color Picker React</h3>
+                            <p>A Simple Color Picker using React</p>
+                            <a href="https://color-picker-reacttesting.netlify.app/" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Aqours66/Color-Picker-React" class="code-button">View Code</a>
                         </div>
                     </div>
                     <div class="work">
