--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/Project 1.png" alt="Project Image">
+                        <img src="Image/Project 4.png" alt="Project Image">
                         <div class="layer">
-                            <h3>My project title</h3>
-                            <p>Description</p>
-                            <a href="#" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="code-button">View Code</a>
+                            <h3>Task Management</h3>
+                            <p>A Simple Task Manager</p>
+                            <a href="https://aqours66.github.io/Task-Management/" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Aqours66/Task-Management" class="code-button">View Code</a>
                         </div>
                     </div>
 
