--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="Image/1395.jpg">
+    <link rel="icon" type="image/x-icon" href="Image/Logo.jpg">
     <title>Ong Wei An - Portfolio</title>
     <meta name="description" content="I'm Ong Wei An, a passionate Fullstack Developer skilled in HTML, CSS, JavaScript, PHP, and MySQL. I create visually stunning websites with a focus on user experience. Explore my projects and get in touch to bring your ideas to life.">
     <meta name="keywords" content="web development, portfolio, projects, services, web developer, website develpoment, UI/UX Design">
@@ -79,7 +79,7 @@
                 </div>
                 <div class="right-content">
                     <div class="profile-image">
-                        <img src="Image/1350.jpg" alt="Ong Wei An Image" class="profile-image">
+                        <img src="Image/Logo.jpg" alt="Ong Wei An Image" class="profile-image">
                     </div>
                 </div>
 
@@ -237,7 +237,7 @@
                     <h2 class="contact-section-title">Contact Me</h2>
                     <div class="contact-info">
                         <p>Email: ongweian1234@gmail.com</p>
-                        <img src="Image/1350.jpg" alt="Profile Picture">
+                        <img src="Image/Logo.jpg" alt="Profile Picture">
                     </div>
                 </div>
                 <div class="contact-right">
