--- a/index.html
+++ b/index.html
@@ -209,7 +209,16 @@
                             <a href="https://github.com/Aqours66/Task-Management" class="code-button">View Code</a>
                         </div>
                     </div>
-
+                    <div class="work">
+                        <img src="Image/Project 5.png" alt="Project Image">
+                        <div class="layer">
+                            <h3>Book Store</h3>
+                            <p>Project Summary: This online bookshop project showcases my ability to design and develop a fully functional e-commerce website tailored for book enthusiasts. The platform is built to provide a seamless user experience while
+                                incorporating modern web development technologies and best practices.</p>
+                            <a href="" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Aqours66/book-store" class="code-button">View Code</a>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
