--- a/index.html
+++ b/index.html
@@ -183,6 +183,16 @@
                         </div>
                     </div>
                     <div class="work">
+                        <img src="Image/Project 5.png" alt="Project Image">
+                        <div class="layer">
+                            <h3>Book Store</h3>
+                            <p>Project Summary: This online bookshop project showcases my ability to design and develop a fully functional e-commerce website tailored for book enthusiasts. The platform is built to provide a seamless user experience while
+                                incorporating modern web development technologies and best practices.</p>
+                            <a href="" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Aqours66/book-store" class="code-button">View Code</a>
+                        </div>
+                    </div>
+                    <div class="work">
                         <img src="Image/Project 2.png" alt="Project Image">
                         <div class="layer">
                             <h3>Click Game</h3>
@@ -210,15 +220,15 @@
                         </div>
                     </div>
                     <div class="work">
-                        <img src="Image/Project 5.png" alt="Project Image">
+                        <img src="Image/Project 6.png" alt="Project Image">
                         <div class="layer">
-                            <h3>Book Store</h3>
-                            <p>Project Summary: This online bookshop project showcases my ability to design and develop a fully functional e-commerce website tailored for book enthusiasts. The platform is built to provide a seamless user experience while
-                                incorporating modern web development technologies and best practices.</p>
-                            <a href="" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="https://github.com/Aqours66/book-store" class="code-button">View Code</a>
+                            <h3>QR Code Generator</h3>
+                            <p>A QR Code generator using html css and javascript</p>
+                            <a href="https://aqours66.github.io/Task-Management/" aria-label="Project Website"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://github.com/Aqours66/Task-Management" class="code-button">View Code</a>
                         </div>
                     </div>
+
                 </div>
             </section>
         </div>
